--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,6 +1,7 @@
 // styles applied on :host are applied on the current component, "app" in this case
 :host {
   display: block;
+  margin: 0 10%;
 }
 
 header {
@@ -16,7 +17,6 @@ header {
 main {
   padding: 1em;
   font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
   margin-top: 50px;
   display: block;
 }
