--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,8 +1,89 @@
 // styles in src/style directory are applied to the whole page
+
 body {
     background: #0147A7;
     color: #fff;
 }
 a {
     color: #03A9F4;
+}
+
+ul {
+  list-style-type: none;
+  
+  li:before {
+    content: '- ';
+  }
+}
+
+body {
+    background-color: #f8f8f8;
+    font-size: 16px;
+    color: #012;
+}
+
+h1, h2, h3, h4, h5, h6, p, a, span, li, a, td, th {
+    font-family: Helvetica, Arial, sans-serif;
+    line-height: 140%;
+    font-weight: 300;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 400;
+    line-height: 200%;
+    margin: 0;
+}
+
+h1 {
+    font-size: 3em;
+}
+
+h2 {
+    font-size: 2.4em;
+}
+
+h3 {
+    font-size: 2em;
+}
+
+h4 {
+    font-size: 1.6em;
+}
+
+h5, th {
+    font-size: 1.4em;
+}
+
+h6 {
+    font-size: 1.2em;
+}
+
+p {
+    margin: 1em 0;
+}
+
+code {
+    font-family: consolas, courier, monotype;
+    font-weight: light;
+}
+
+table {
+	text-align: left;
+}
+
+li {
+	list-style-type: none;
+	&:before {
+		content: '-';
+		margin: 10px;
+	}
+}
+
+anchor, .anchor-wrapper {
+    position: relative;
+    top: -60px;
+
+    a {
+        display: block;
+    }
 }
