added more notes, modified structure a bit

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,5 @@
-
+<header><h5>ng-conf-notes</h5></header>
 <main>
   <router-outlet></router-outlet>
 </main>
+<footer>Angular 2 Example app by Chris Bauer</footer>
