--- a/src/app/components/notes/notes.html
+++ b/src/app/components/notes/notes.html
@@ -1,6 +1,8 @@
-<h3>ng-conf notes</h3>
-<ul>
-  <li *ngFor="let note of noteList">
-    <a [routerLink]="['Note', {name: note.key}]">{{note.name}}</a>
-  </li>
-</ul>
+<div *ngFor="let dayNotes of noteList">
+  <h5>Day {{noteList.indexOf(dayNotes) + 1}}</h5>
+  <ul>
+    <li *ngFor="let note of dayNotes">
+      <a [routerLink]="['Note', {name: note.key}]">{{note.name}}</a>
+    </li>
+  </ul>
+</div>
