--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -6,12 +6,17 @@
 
 header {
   background-color: #fff;
-  padding: 16px;
+  padding: 0;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
+  
+  h5 {
+    margin: 0;
+    text-align: center;
+  }
 }
 
 main {
@@ -24,4 +29,6 @@ main {
 footer {
   text-align: center;
   font-size: 0.8em;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 300;
 }
